2005-08-03  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkmenushell.[ch]: Added new "close" signal which closes
	only current menu level and not its parent.

2005-08-01  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkcombobox.c: Adds a new boolean property called
	"propagate-lr-keys" to GtkComboBox. When set to TRUE (its default
	value is FALSE), the key-press events for GDK_Left and GDK_Right
	keys are propagated further as in stock GTK+. However, the default
	behaviour for GtkComboBox must be to eat up key-press events for
	left/right hardkeys, because otherwise focus might be shifted away
	from the choice list when items contained in it are browsed using
	left/right hardkeys. The added property allows overriding this
	default behaviour in special occasions such as this.
	
	* gtk/gtkcombobox.c (gtk_combo_box_menu_size_request): width of
	popup can now be as large as the combo's width

	* gtk/gtkmenuitem.c: Added a delay for showing submenus.

	* gtk/gtktreeview.c: fix "Mark all does not select all (passive
	focus makes item look unselected)". Passive focus is now replaced
	with the selection indicator whenever treeview is in multiple
	selection mode without checkboxes.

	* gtk/gtktreeview.c: (check_if_can_focus) Added NULL checks to prevent
	access to deleted rows.

	* gtk/gtktextbuffer.c (clipboard_clipboard_buffer_received):
	* gtk/gtktextbufferserialize.c: improved clipboard, handle anonymous
	tags.

	* gtk/gtkmenushell.c (gtk_real_menu_shell_move_current): Added 
	comment to document reason for commenting out a block of code

	* gtk/gtktextview.c: All text before cursor isn't needed to be set to
	surroundings, only the last non-whitespace character before the
	cursor (we'll use the last non-whitespace before the beginning of
	current line though)

	* gtk/gtkcellrenderertoggle.c: Code cleanup

2005-07-26  Luc Pionchon  <luc.pionchon@nokia.com>

	* gtk/gtkcellview.c (gtk_cell_view_size_allocate): adjust cell
	width to avoid truncation issues.
